--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-roles_path = ./roles
-inventory  = ./hosts.ini
+#roles_path = ./roles
+#inventory  = ./hosts.ini
 
 remote_tmp = $HOME/.ansible/tmp
 local_tmp  = $HOME/.ansible/tmp
@@ -8,4 +8,4 @@ pipelining = True
 become = True
 host_key_checking = False
 deprecation_warnings = False
-callback_whitelist = profile_tasks
+#callback_whitelist = profile_tasks
