--- a/roles/commons/os-checker/tasks/main.yml
+++ b/roles/commons/os-checker/tasks/main.yml
@@ -13,20 +13,6 @@
   register: distro
   changed_when: False
 
-- name: Set fact ansible_os_family var to Debian
-  when:
-    - ansible_os_family is not defined
-    - "'Debian' in distro.stdout"
-  set_fact:
-    ansible_os_family: Debian
-
-- name: Set fact ansible_os_family var to Debian
-  when:
-    - ansible_os_family is not defined
-    - "'Ubuntu' in distro.stdout"
-  set_fact:
-    ansible_os_family: Debian
-
 - name: Set fact ansible_os_family var to RedHat
   when:
     - ansible_os_family is not defined
@@ -34,7 +20,24 @@
   set_fact:
     ansible_os_family: RedHat
 
-- name: Override config file directory for Debian
-  when: ansible_os_family == "Debian"
-  set_fact:
-    system_env_dir: "/etc/default"
+
+#- name: Set fact ansible_os_family var to Debian
+#  when:
+#    - ansible_os_family is not defined
+#    - "'Debian' in distro.stdout"
+#  set_fact:
+#    ansible_os_family: Debian
+#
+#- name: Set fact ansible_os_family var to Debian
+#  when:
+#    - ansible_os_family is not defined
+#    - "'Ubuntu' in distro.stdout"
+#  set_fact:
+#    ansible_os_family: Debian
+
+
+
+#- name: Override config file directory for Debian
+#  when: ansible_os_family == "Debian"
+#  set_fact:
+#    system_env_dir: "/etc/default"
