--- a/roles/commons/pre-install/tasks/pkg.yml
+++ b/roles/commons/pre-install/tasks/pkg.yml
@@ -1,17 +1,17 @@
 ---
 
-- name: Add Kubernetes APT GPG key
-  when: ansible_os_family == "Debian"
-  apt_key:
-    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-    state: present
-
-- name: Add Kubernetes APT repository
-  when: ansible_os_family == "Debian"
-  apt_repository:
-    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
-    state: present
-    filename: 'kubernetes'
+#- name: Add Kubernetes APT GPG key
+#  when: ansible_os_family == "Debian"
+#  apt_key:
+#    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+#    state: present
+#
+#- name: Add Kubernetes APT repository
+#  when: ansible_os_family == "Debian"
+#  apt_repository:
+#    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+#    state: present
+#    filename: 'kubernetes'
 
 - name: Add Kubernetes yum repository
   when: ansible_os_family == "RedHat"
