--- a/roles/kubernetes/node/tasks/join.yml
+++ b/roles/kubernetes/node/tasks/join.yml
@@ -7,7 +7,7 @@
 - name: Join to Kubernetes cluster
   when: reset_cluster is succeeded
   shell: |
-    kubeadm join --token {{ token }} \
+     --token {{ token }} \
                 --discovery-token-unsafe-skip-ca-verification \
                 {{ master_ip }}:6443
   register: join_cluster
