--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -23,7 +23,7 @@ network: calico
 # For example, on DigitalOcean, you would use eth1 as that is the default private network interface.
 network_interface: "ens33"
 
-enable_dashboard: yes
+enable_dashboard: no
 
 # A list of insecure registries you might need to define
 # insecure_registries: []
