--- a/roles/cni/tasks/main.yml
+++ b/roles/cni/tasks/main.yml
@@ -13,7 +13,7 @@
     - ../templates/{{ network }}*.j2
 
 - name: "Check {{ network }} daemonset is working"
-  shell: kubectl --kubeconfig={{ kubeadmin_config }} get ds --all-namespaces | grep {{ network }}
+  shell: kubectl --kubeconfig={{ admin_config }} get ds --all-namespaces | grep {{ network }}
   delegate_to: "{{ groups['master'][0] }}"
   run_once: true
   register: check_net
@@ -22,6 +22,6 @@
 
 - name: "Create {{ network }} network daemonset"
   when: check_net is failed
-  command: kubectl apply --kubeconfig={{ kubeadmin_config }} -f {{ network_dir }}/
+  command: kubectl apply --kubeconfig={{ admin_config }} -f {{ network_dir }}/
   delegate_to: "{{ groups['master'][0] }}"
   run_once: true
