--- a/roles/kubernetes/master/handlers/main.yml
+++ b/roles/kubernetes/master/handlers/main.yml
@@ -3,7 +3,7 @@
 - name: Deploy kubernetes dashboard into cluster
   when: init_cluster and started_kubelet and enable_dashboard
   command: |
-    kubectl --kubeconfig={{ kubeadmin_config }} \
+    kubectl --kubeconfig={{ admin_config }} \
         apply -f https://raw.githubusercontent.com/kubernetes/dashboard/master/aio/deploy/recommended/kubernetes-dashboard.yaml 
   register: create_result
   until: create_result.rc == 0
