--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -7,7 +7,16 @@
 
 - name: Init cluster if needed
   include_tasks: init.yml
-  when: not kubeadm_ca.stat.exists
+  when:
+    - not kubeadm_ca.stat.exists
+    - groups['master'][0] == {{ inventory_hostname }}
+  run_once: yes
+
+- name: Join cluster if needed
+  include_tasks: join.yml
+  when:
+    - not kubeadm_ca.stat.exists
+    - groups['master'][0] != {{ inventory_hostname }}
   run_once: yes
 
 - name: Enable and check kubelet service
@@ -25,4 +34,5 @@
     flat: yes
   run_once: yes
   ignore_errors: yes
-
+  when:
+    - groups['master'][0] != {{ inventory_hostname }}
