--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -7,16 +7,12 @@
 
 - name: Init cluster if needed
   include_tasks: init.yml
-  when:
-    - not kubeadm_ca.stat.exists
-    - '"{{ hostvars[groups['master'][0]] }}" == "{{ inventory_hostname }}"'
+  when: not kubeadm_ca.stat.exists and 'groups.master[0] == inventory_hostname'
   run_once: yes
 
 - name: Join cluster if needed
   include_tasks: join.yml
-  when:
-    - not kubeadm_ca.stat.exists
-    - '"{{ hostvars[groups['master'][0]] }}" != "{{ inventory_hostname }}"'
+  when: not kubeadm_ca.stat.exists and 'groups.master[0] != inventory_hostname'
   run_once: yes
 
 - name: Enable and check kubelet service
@@ -34,5 +30,4 @@
     flat: yes
   run_once: yes
   ignore_errors: yes
-  when:
-    - '"{{ hostvars[groups['master'][0]] }}" != "{{ inventory_hostname }}"'
+  when: 'groups.master[0] == inventory_hostname'
