--- a/site-master.yaml
+++ b/site-master.yaml
@@ -5,9 +5,14 @@
   roles:
     - { role: docker, tags: docker }
 
-- hosts: master
+- hosts: master[0]
   gather_facts: yes
   become: yes
   roles:
-    - { role: kubernetes/master, tags: master }
+    - { role: kubernetes/master, tags: init }
 
+- hosts: master[1:3]
+  gather_facts: yes
+  become: yes
+  roles:
+    - { role: kubernetes/master, tags: join }
