--- a/roles/kubernetes/master/tasks/init.yml
+++ b/roles/kubernetes/master/tasks/init.yml
@@ -5,8 +5,9 @@
   register: reset_cluster
 
 - name: Copy kubeadm conf to drop-in directory
+  when: reset_cluster is succeeded
   template:
-    src: kubeadm.config.j2
+    src: init.config.j2
     dest: "{{ kubeadm_config }}"
     backup: true
 
@@ -15,7 +16,15 @@
   shell: kubeadm init --config {{ kubeadm_config }} --upload-certs --skip-phases addon
   register: init_cluster
 
+- name: Get ca cert hash
+  when: init_cluster is succeeded
+  shell: openssl x509 -pubkey -in {{ certificates_dir }}/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* /sha256:/'
+  register: caCertHashes
+
+- set_fact: caCertHashes={{ cluster_join.stdout }}
+
 - name: Create Kubernetes config directory
+  when: init_cluster is succeeded
   file:
     path: ".kube/"
     state: directory
@@ -29,3 +38,4 @@
     group: "{{ ansible_user | default(ansible_user_id) }}"
     mode: 0755
     remote_src: true
+
