--- a/roles/kubernetes/master/tasks/join.yml
+++ b/roles/kubernetes/master/tasks/join.yml
@@ -3,7 +3,32 @@
   shell: "kubeadm reset --force"
   register: reset_cluster
 
+- set_fact: caCertHashes={{ hostvars[groups['master'][0]]['caCertHashes'] }}
+
+- name: Copy kubeadm conf to drop-in directory
+  when: reset_cluster is succeeded
+  template:
+    src: join.config.j2
+    dest: "{{ kubeadm_config }}"
+    backup: true
+
 - name: Join to Kubernetes cluster
   when: reset_cluster is succeeded
-  shell: echo hello
-#  shell: kubeadm join {{ control_plane_endpoint }} --token {{ token }} --discovery-token-ca-cert-hash {{ }} --control-plane --certificate-key {{ certificate_key }}
+  shell: kubeadm join --config {{ kubeadm_config }}
+  register: join_cluster
+
+- name: Create Kubernetes config directory
+  when: join_cluster is succeeded
+  file:
+    path: ".kube/"
+    state: directory
+
+- name: Copy admin.conf to Home directory
+  when: join_cluster is succeeded
+  copy:
+    src: "{{ admin_config }}"
+    dest: ".kube/config"
+    owner: "{{ ansible_user | default(ansible_user_id) }}"
+    group: "{{ ansible_user | default(ansible_user_id) }}"
+    mode: 0755
+    remote_src: true
