--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -9,6 +9,8 @@
   when: (not kubeadm_ca.stat.exists ) and (groups.master.0 == inventory_hostname)
   run_once: yes
 
+- name: Set
+
 - name: Join cluster if needed
   include_tasks: join.yml
   when: (not kubeadm_ca.stat.exists ) and (groups.master.0 != inventory_hostname)
