--- a/hosts.ini
+++ b/hosts.ini
@@ -1,6 +1,7 @@
 [master]
-192.168.202.21
-192.168.202.22
+192.168.202.21 etcd_name=etcd20221
+192.168.202.22 etcd_name=etcd20222
+192.168.202.23 etcd_name=etcd20223
 
 [node]
 
