--- a/roles/kubernetes/master/tasks/init.yml
+++ b/roles/kubernetes/master/tasks/init.yml
@@ -10,14 +10,14 @@
     dest: "{{ kubeadm_config }}"
     backup: true
 
-- set_fact: initCluster=1
+- set_fact: initStat=1
 
 - name: Init Kubernetes cluster
   when: reset_cluster is succeeded
   shell: kubeadm init --config {{ kubeadm_config }} --upload-certs --skip-phases addon
   register: init_cluster
 
-- set_fact: initCluster={{ init_cluster.rc }}
+- set_fact: initStat={{ init_cluster.rc }}
 
 - name: Get ca cert hash
   when: init_cluster is succeeded
