--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -9,8 +9,6 @@
   when: (not kubeadm_ca.stat.exists ) and (groups.master.0 == inventory_hostname)
   run_once: yes
 
-- set_fact: initCluster={{ hostvars[groups['master'][0]]['initCluster'] }}
-
 - block:
     - name: Join cluster if needed
       when: init_cluster is succeeded
@@ -33,4 +31,4 @@
       run_once: yes
       ignore_errors: yes
       when: (not kubeadm_ca.stat.exists ) and (groups.master.0 == inventory_hostname)
-  when: initCluster == 0
+  when: {{ hostvars[groups['master'][0]]['initCluster'] }} == 0
