--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -31,4 +31,4 @@
       run_once: yes
       ignore_errors: yes
       when: (not kubeadm_ca.stat.exists ) and (groups.master.0 == inventory_hostname)
-  when:  hostvars[groups['master'][0]]['initStat'] == 0
+  when: (not kubeadm_ca.stat.exists ) and (hostvars[groups['master'][0]]['initStat'] == 0)
