--- a/roles/kubernetes/master/tasks/join.yml
+++ b/roles/kubernetes/master/tasks/join.yml
@@ -8,7 +8,7 @@
 - name: Copy kubeadm conf to drop-in directory
   when: reset_cluster is succeeded
   template:
-    src: join.config.j2
+    src: kubeadm.config.j2
     dest: "{{ kubeadm_config }}"
     backup: true
 
