--- a/roles/kubernetes/master/tasks/init.yml
+++ b/roles/kubernetes/master/tasks/init.yml
@@ -3,7 +3,7 @@
   shell: "kubeadm reset --force"
   register: reset_cluster
 
-- set_fact: caCertHashes="not need"
+- set_fact: caCertHashes="init phases, no need caCertHashes"
 
 - name: Copy kubeadm conf to drop-in directory
   when: reset_cluster is succeeded
