--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -21,6 +21,8 @@ certificates_dir: /etc/kubernetes/pki
 image_repository: k8s.gcr.io
 control_plane_endpoint: 192.168.202.21
 ## apiServer
+tmp_etcd_servers: "{% for master_ip in groups['master'] %}https://{{ master_ip }}:2379,{% endfor %}"
+etcd_servers: "{{ tmp_etcd_servers.rstrip(',') }}"
 
 ## network
 service_subnet: "10.96.0.0/12"
