--- a/roles/kubernetes/node/tasks/join.yml
+++ b/roles/kubernetes/node/tasks/join.yml
@@ -1,15 +1,18 @@
 ---
-
 - name: Reset Kubernetes component
   shell: "kubeadm reset --force"
   register: reset_cluster
 
-- name: Join to Kubernetes cluster
-  when: reset_cluster is succeeded
-  shell: |
-     --token {{ token }} \
-                --discovery-token-unsafe-skip-ca-verification \
-                {{ master_ip }}:6443
-  register: join_cluster
-  notify:
-    - Recreate kube-dns
+- set_fact: caCertHashes={{ hostvars[groups['master'][0]]['caCertHashes'] }}
+
+- block:
+  - name: Copy kubeadm conf to drop-in directory
+    template:
+      src: join.config.j2
+      dest: "{{ kubeadm_config }}"
+      backup: true
+
+  - name: Join to Kubernetes cluster
+    shell: kubeadm join --config {{ kubeadm_config }}
+
+when: reset_cluster is succeeded
