--- a/roles/kubernetes/node/tasks/join.yml
+++ b/roles/kubernetes/node/tasks/join.yml
@@ -3,7 +3,10 @@
   shell: "kubeadm reset --force"
   register: reset_cluster
 
-- set_fact: caCertHashes={{ hostvars[groups['master'][0]]['caCertHashes'] }}
+- name: Get ca cert hash
+  shell: openssl x509 -pubkey -in {{ certificates_dir }}/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* /sha256:/'
+  delegate_to: groups.master.0
+  register: caCertHashes
 
 - block:
   - name: Copy kubeadm conf to drop-in directory
