--- a/roles/kubernetes/node/tasks/main.yml
+++ b/roles/kubernetes/node/tasks/main.yml
@@ -4,6 +4,15 @@
     path: "/etc/kubernetes/kubelet.conf"
   register: kubelet_conf
 
+- name: Get ca cert hash
+  shell: openssl x509 -pubkey -in {{ certificates_dir }}/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* /sha256:/'
+  delegate_to: "{{ groups.master.0 }}"
+  register: caCertHashes
+  run_once: yes
+
+- set_fact: caCertHashes={{ caCertHashes.stdout }}
+  run_once: yes
+
 - name: Join to cluster if needed
   include_tasks: join.yml
   when: not kubelet_conf.stat.exists
