--- a/roles/kubernetes/master/tasks/join.yml
+++ b/roles/kubernetes/master/tasks/join.yml
@@ -3,7 +3,14 @@
   shell: "kubeadm reset --force"
   register: reset_cluster
 
-- set_fact: caCertHashes={{ hostvars[groups['master'][0]]['caCertHashes'] }}
+- name: Get ca cert hash
+  when: init_cluster is succeeded
+  shell: openssl x509 -pubkey -in {{ certificates_dir }}/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* /sha256:/'
+  register: caCertHashes
+  run_once: yes
+  delegate_to: "{{ groups.master.0 }}"
+- set_fact: caCertHashes={{ caCertHashes.stdout }}
+  run_once: yes
 
 - name: Copy kubeadm conf to drop-in directory
   when: reset_cluster is succeeded
