--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -14,21 +14,18 @@
     include_tasks: join.yml
     when: groups.master.0 != inventory_hostname
 
-#  - name: Enable and check kubelet service
-#    systemd:
-#      name: kubelet
-#      daemon_reload: yes
-#      state: started
-#      enabled: yes
-#    register: started_kubelet
+  - name: Create Kubernetes config directory
+    file:
+      path: ".kube/"
+      state: directory
 
-#  - name: "Copy config file"
-#    fetch:
-#      src: /etc/kubernetes/admin.conf
-#      dest: "{{ lookup('env', 'HOME') }}/admin.conf"
-#      flat: yes
-#    run_once: yes
-#    ignore_errors: yes
-#    when: groups.master.0 == inventory_hostname
+  - name: Copy admin.conf to Home directory
+    copy:
+      src: "{{ admin_config }}"
+      dest: ".kube/config"
+      owner: "{{ ansible_user | default(ansible_user_id) }}"
+      group: "{{ ansible_user | default(ansible_user_id) }}"
+      mode: 0755
+      remote_src: true
 
   when: not kubeadm_ca.stat.exists
