--- a/roles/kubernetes/master/meta/main.yml
+++ b/roles/kubernetes/master/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
 #  - { role: commons/os-checker }
-  - { role: commons/pre-install, pkgs: ["kubelet", "kubeadm", "kubectl"] }
+  - { role: commons/pre-install, pkgs: ["kubelet-{{ kube_version }}", "kubeadm-{{ kube_version }}", "kubectl-{{ kube_version }}"] }
