--- a/roles/kubernetes/node/meta/main.yml
+++ b/roles/kubernetes/node/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
 #  - { role: commons/os-checker }
-  - { role: commons/pre-install , pkgs: ["kubelet", "kubeadm"] }
+  - { role: commons/pre-install , pkgs: ["kubelet-{{ kube_version }}", "kubeadm-{{ kube_version }}"] }
