--- a/roles/kubernetes/node/tasks/join.yml
+++ b/roles/kubernetes/node/tasks/join.yml
@@ -15,7 +15,7 @@
     register: join_cluster
 
   - name: 设置node节点role
-    shell: "{{ bin_dir }}/kubectl label node {{ inventory_hostname }} kubernetes.io/role=node --overwrite"
+    shell: "kubectl --kubeconfig={{ admin_config }} label node {{ inventory_hostname }} kubernetes.io/role=node --overwrite"
     delegate_to: "{{ groups.master.0 }}"
     ignore_errors: true
     when: join_cluster is succeeded
