--- a/roles/kubernetes/node/tasks/main.yml
+++ b/roles/kubernetes/node/tasks/main.yml
@@ -1,8 +1,7 @@
 ---
-- name: Check if kubelet.conf exists
-  stat:
-    path: "/etc/kubernetes/kubelet.conf"
-  register: kubelet_conf
+- name: Check if kubelet running
+  shell: "systemctl status kubelet.service|grep Active"
+  register: kubelet_status
 
 - block:
 
@@ -26,4 +25,4 @@
       state: started
       enabled: yes
 
-  when: not kubelet_conf.stat.exists
+  when: '"running" not in kubelet_status.stdout'
