--- a/site.yaml
+++ b/site.yaml
@@ -11,6 +11,7 @@
   become: yes
   roles:
     - { role: kubernetes/master, tags: master }
+    - { role: cni, tags: cni }
 
 - hosts: node
   gather_facts: yes
