--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -58,7 +58,8 @@ admin_config: /etc/kubernetes/admin.conf
 
 # Network implementation('flannel', 'calico', 'canal')
 network: flannel
-
+service_cidr: "10.96.0.0/12"
+pod_network_cidr: "10.244.0.0/16"
 # Change this to an appropriate interface, preferably a private network.
 # For example, on DigitalOcean, you would use eth1 as that is the default private network interface.
 network_interface: ""
