--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -31,7 +31,7 @@
   - name: Deploy kubernetes dashboard into cluster
     when: init_cluster is succeeded and enable_dashboard
     command: |
-      kubectl --kubeconfig={{ kubeadmin_config }} \
+      kubectl --kubeconfig={{ admin_config }} \
           apply -f https://raw.githubusercontent.com/kubernetes/dashboard/master/aio/deploy/recommended.yaml
     register: create_result
     until: create_result.rc == 0
