--- a/roles/cni/tasks/main.yml
+++ b/roles/cni/tasks/main.yml
@@ -25,3 +25,4 @@
   command: kubectl apply --kubeconfig={{ admin_config }} -f {{ network_dir }}/
   delegate_to: "{{ groups['master'][0] }}"
   run_once: true
+  ignore_errors: true
